<resources>
    <string name="app_name">ShoppingApp41</string>
    <string name="name">Name</string>
    <string name="get_all">Получить все</string>
    <string name="edit">Редактировать</string>
    <string name="get">Получить</string>
    <string name="add">Добавить</string>
    <string name="remove">Удалить</string>
    <string name="redactor_toast">Редактируемая строка не может быть пустой</string>
    <string name="put_the_news">Put the news</string>
    <string name="todo">TODO</string>
    <string name="save_text">Сохранить текст</string>
    <string name="put_the_count">put the count</string>
</resources>