<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".presentation.main.MainActivity">

    <Button
        android:id="@+id/btn_delete_shop_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"/>

    <Button
        android:id="@+id/btn_add_shop_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add"/>

    <Button
        android:id="@+id/btn_get_shop_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        />
    <Button
        android:id="@+id/btn_get_shop_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/get_all"
        />


    <Button
        android:id="@+id/btn_edit_shop_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/edit"
        />
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:ignore="LabelFor" />

</LinearLayout>